--- a/NEWS
+++ b/NEWS
@@ -1,12 +1,15 @@
 			irker history 
 
-2.23: 2023-01-27::
+Repository head:
+  Allow irkerhook to cope with signed git commit.
+
+2.23: 2023-01-27
   Fix typo in support for IPv6 listening.
 
-2.22: 2022-03-15::
+2.22: 2022-03-15
   Add support for IPv6 listening.
 
-2.21: 2022-01-25::
+2.21: 2022-01-25
   Restore function of immediate option.
 
 2.20: 2021-09-20
